--- a/package.json
+++ b/package.json
@@ -61,19 +61,12 @@
     "recharts": "^2.10.0"
   },
   "devDependencies": {
-    "@next/eslint-config-next": "^14.1.0",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^3.2.0",
+    "eslint-config-next": "^14.1.0",
     "@types/jest": "^29.5.0",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@testing-library/react": "^14.1.0",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/user-event": "^14.5.0",
-    "@storybook/nextjs": "^7.6.0",
-    "@storybook/react": "^7.6.0",
-    "@storybook/addon-essentials": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "prettier": "^3.2.0",
     "supabase": "^1.127.0"
   },
   "engines": {
