--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.62.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-flag-icons": "^1.6.14",
     "date-fns": "^3.3.1",
     "dexie": "^3.2.5",
     "dexie-react-hooks": "^1.1.7",
@@ -46,8 +48,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
-    "zustand": "^4.5.1",
-    "tailwind-merge": "^3.4.0"
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
