--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "node fix-ada-design-system.js && next build",
     "start": "next start -p 3001",
     "lint": "next lint",
     "test": "jest",
