--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tailwindcss/postcss": "^4.2.1",
     "@tanstack/react-query": "^5.62.0",
     "ada-design-system": "^3.1.2",
     "class-variance-authority": "^0.7.1",
